Add README files for both crates (#11)
## Summary

- Add README.md for `fontcull` library with usage examples and API
documentation
- Add README.md for `fontcull-cli` with CLI usage and options reference
- Add `readme = "README.md"` to both Cargo.toml files for crates.io
display
- Use `#![doc = include_str!("../README.md")]` in lib.rs/main.rs for
rustdoc

## Test plan

- [x] `cargo check` passes
- [x] `cargo doc --no-deps -p fontcull -p fontcull-cli` builds
successfully

--- a/fontcull-cli/Cargo.toml
+++ b/fontcull-cli/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/bearcove/fontcull"
 homepage = "https://github.com/bearcove/fontcull"
 keywords = ["font", "subset", "woff2", "web", "glyphhanger"]
 categories = ["command-line-utilities", "web-programming"]
+readme = "README.md"
 
 [package.metadata.wix]
 upgrade-guid = "9FF2FB57-9D1B-4336-BDE9-0A200F15DADA"
